// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HfConversationalTaskOptions: $prompt 1`] = `
{
  "inputs": "mock-prompt",
}
`;

exports[`HfConversationalTaskOptions: $prompt, generated_responses 1`] = `
{
  "generated_responses": [
    "response1",
    "response2",
  ],
  "inputs": "mock-prompt",
}
`;

exports[`HfConversationalTaskOptions: $prompt, options 1`] = `
{
  "inputs": "mock-prompt",
  "options": {
    "use_cache": true,
    "wait_for_model": false,
  },
}
`;

exports[`HfConversationalTaskOptions: $prompt, parameters 1`] = `
{
  "inputs": "mock-prompt",
  "parameters": {
    "max_length": 100,
    "max_time": 60,
    "min_length": 10,
    "repetition_penalty": 1.2,
    "temperature": 0.7,
    "top_k": 50,
    "top_p": 0.9,
  },
}
`;

exports[`HfConversationalTaskOptions: $prompt, past_user_inputs 1`] = `
{
  "inputs": "mock-prompt",
  "past_user_inputs": [
    "input1",
    "input2",
  ],
}
`;

exports[`HfConversationalTaskOptions: $prompt, past_user_inputs, generated_responses 1`] = `
{
  "generated_responses": [
    "response1",
    "response2",
  ],
  "inputs": "mock-prompt",
  "past_user_inputs": [
    "input1",
    "input2",
  ],
}
`;

exports[`HfConversationalTaskOptions: all options 1`] = `
{
  "generated_responses": [
    "response1",
    "response2",
  ],
  "inputs": "mock-prompt",
  "options": {
    "use_cache": true,
    "wait_for_model": false,
  },
  "parameters": {
    "max_length": 100,
    "max_time": 60,
    "min_length": 10,
    "repetition_penalty": 1.2,
    "temperature": 0.7,
    "top_k": 50,
    "top_p": 0.9,
  },
  "past_user_inputs": [
    "input1",
    "input2",
  ],
}
`;
